# danke

./: .gitignore  Cargo.toml  danke.db  danke.db-wal
migrations/: 20230117000220_init.sql
src/: db.rs  handlers.rs  lib.rs  main.rs  maintain.rs  rating.rs  tg.rs
