[package]
name = "danke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.14.0"
log = "0.4"
simple_logger = "4.0.0"
teloxide = { version = "0.11.3", features = ["macros"] }
teloxide-macros = "0.7.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
